Fix some weird wraps

--- a/talk.css
+++ b/talk.css
@@ -125,12 +125,12 @@
   height: 100%;
 }
 .sscdingus .input, .sscdingus .output {
-  width: calc(45% - 35px);
+  width: calc(50% - 30px);
 }
 .sscdingus .arrow {
-  width: 70px;
+  width: 60px;
 
-  font-size: 7rem;
+  font-size: 6.5rem;
   font-weight: bold;
   color: #51a012;
   margin-top: 8px;
